# BattleSystem

./: CMakeLists.txt  TODO
graphics/: BattleGrid.cpp  BattleGrid.h  CMakeLists.txt  Grid.cpp  Grid.h  PathFinder.cpp  PathFinder.h  SDLBackend.cpp  SDLBackend.h  SDLTimer.cpp  SDLTimer.h  Tile.cpp  Tile.h  UnitView.cpp  UnitView.h  main.cpp
notes/: armor_chart  attack_matrix_for_monster  character_abilites  class_armor_usage  class_hit_die  class_info  experience_matrix  race_info  saving_throws_matrix  treasure_matrix  weapon_chart
src/: BattleSystem.cpp  BattleSystem.h  CMakeLists.txt  Character.cpp  Character.h  CharacterStats.h  Charisma.cpp  Charisma.h  Class.cpp  Class.h  Constitution.cpp  Constitution.h  Dexterity.cpp  Dexterity.h  Dice.cpp  Dice.h  DiceFactory.cpp  DiceFactory.h  Direction.cpp  Direction.h  Equipment.cpp  Equipment.h  Fighter.cpp  Fighter.h  Human.cpp  Human.h  Intelligence.cpp  Intelligence.h  Inventory.cpp  Inventory.h  MoneyPouch.cpp  MoneyPouch.h  Monster.cpp  Monster.h  Point.cpp  Point.h  Race.cpp  Race.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  (+8 more)
src/items/: Armor.cpp  Armor.h  Item.cpp  Item.h  Shield.cpp  Shield.h  Weapon.cpp  Weapon.h  WeaponBreed.h
tests/: CMakeLists.txt  test_main.cpp
